@@ -38,7 +38,7 @@ jscore_excludes.extend(get_excludes(jscore_dir, ['*None.cpp']))
 
 if build_port == "wx":
     if building_on_win32:
-        jscore_excludes += ['MarkStackPosix.cpp', 'ThreadingPthreads.cpp']
+        jscore_excludes += ['MarkStackPosix.cpp', 'OSAllocatorPosix.cpp', 'ThreadingPthreads.cpp']
         sources += ['runtime/MarkStackWin.cpp']
     else:
         jscore_excludes.append('JSStringRefBSTR.cpp')
