@@ -1,3 +1,11 @@
+2011-03-03  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fixes. Use Font::textMetrics to get ascent value, and add missing include.
+
+        * platform/wx/DragDataWx.cpp:
+        * platform/wx/wxcode/win/non-kerned-drawing.cpp:
+        (WebCore::drawTextWithSpacing):
+
 2011-03-03  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Geoffrey Garen.
